--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,12 @@
     box-sizing: border-box;
 }
 
+*::selection {
+    background-color: var(--jedi-black);
+    color: var(--jedi-yellow);
+    text-decoration: underline;
+}
+
 html,
 body {
     height: 100%;
@@ -37,6 +43,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: hsl(0, 0%, 0%);
     color: hsl(0, 0%, 100%);
+    cursor: url(/assets/images/cursor/light-saber-cursor.png), auto;
 }
 
 p {
