--- a/styles.css
+++ b/styles.css
@@ -7,19 +7,19 @@
 @font-face {
     font-family: 'Star Wars';
     font-style: normal;
-    src: url('/assets/fonts/StarJediRounded-jW3R.woff') format('woff');
+    src: url('/starwars-outer-space/assets/fonts/StarJediRounded-jW3R.woff') format('woff');
 }
 
 @font-face {
     font-family: 'Star Wars Outline';
     font-style: normal;
-    src: url('/assets/fonts/Starjhol.woff') format('woff');
+    src: url('/starwars-outer-space/assets/fonts/Starjhol.woff') format('woff');
 }
 
 @font-face {
     font-family: 'ITC Serif Gothic';
     font-style: normal;
-    src: url('/assets/fonts/ITC\ SerifGothic.woff') format('woff');
+    src: url('/starwars-outer-space/assets/fonts/ITC\ SerifGothic.woff') format('woff');
 }
 
 *,
@@ -43,7 +43,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: hsl(0, 0%, 0%);
     color: hsl(0, 0%, 100%);
-    cursor: url(/assets/images/cursor/light-saber-cursor.png), auto;
+    cursor: url(/starwars-outer-space/assets/images/cursor/light-saber-cursor.png), auto;
 }
 
 p,
@@ -54,7 +54,7 @@ li {
 }
 
 ul {
-    list-style: url(/assets/images/fighter.png);
+    list-style: url(/starwars-outer-space/assets/images/fighter.png);
     list-style-position: inside;
 }
 
@@ -72,7 +72,7 @@ header {
     position: relative;
     isolation: isolate;
 
-    background-image: url(/assets/images/space-bg-1.jpg);
+    background-image: url(/starwars-outer-space/assets/images/space-bg-1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     text-align: center;
@@ -133,7 +133,7 @@ section.solar-system-overview {
 
     position: relative;
 
-    background-image: url(/assets/images/space-8bit-bg.jpg);
+    background-image: url(/starwars-outer-space/assets/images/space-8bit-bg.jpg);
     background-size: 100px;
     overflow: hidden;
 }
@@ -146,7 +146,7 @@ section.solar-system-overview::before {
     right: 10%;
     width: 230px;
     height: 210px;
-    background-image: url(/assets/images/death-star.png);
+    background-image: url(/starwars-outer-space/assets/images/death-star.png);
     background-size: cover;
     z-index: 9999;
 
@@ -170,7 +170,7 @@ section.solar-system-overview::after {
     left: 10%;
     height: 150px;
     width: 500px;
-    background-image: url(/assets/images/star-destroyer.png);
+    background-image: url(/starwars-outer-space/assets/images/star-destroyer.png);
     background-size: cover;
     z-index: 9999;
     animation: star-destroyer-move 5s cubic-bezier(0.25, 0.1, 0.25, 1) infinite;
@@ -331,7 +331,7 @@ section.solar-system-objects {
 
 footer {
     padding: 5rem;
-    background-image: url(/assets/images/space-8bit-bg.jpg);
+    background-image: url(/starwars-outer-space/assets/images/space-8bit-bg.jpg);
     background-size: 100px;
     display: grid;
     place-content: center;
